2013-07-26  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-restore-frames): Call `sit-for' once all frames
	are restored to be sure that they are visible before deleting any
	remaining ones.

2013-07-26  Matthias Meulien  <orontee@gmail.com>

	* vc/vc-dir.el (vc-dir-mode-map): Add binding for vc-print-root-log.

2013-07-26  Richard Stallman  <rms@gnu.org>

	Add aliases for encrypting mail.
	* epa.el (epa-mail-aliases): New option.
	* epa-mail.el (epa-mail-encrypt): Rewrite to be callable from programs.
	Bind inhibit-read-only so read-only text doesn't ruin everything.
	(epa-mail-default-recipients): New subroutine broken out.
	Handle epa-mail-aliases.

2013-07-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	Add support for lexical variables to the debugger's `e' command.
	* emacs-lisp/debug.el (debug): Don't let-bind the debugger-outer-*
	vars, except for debugger-outer-match-data.
	(debugger-frame-number): Move check for "on a function call" from
	callers into it.  Add `skip-base' argument.
	(debugger-frame, debugger-frame-clear): Simplify accordingly.
	(debugger-env-macro): Only reset the state stored in non-variables,
	i.e. current-buffer and match-data.
	(debugger-eval-expression): Rewrite using backtrace-eval.
	* subr.el (internal--called-interactively-p--get-frame): Remove.
	(called-interactively-p):
	* emacs-lisp/edebug.el (edebug--called-interactively-skip): Use the new
	`base' arg of backtrace-frame instead.

2013-07-26  Glenn Morris  <rgm@gnu.org>

	* align.el (align-regexp): Doc fix.  (Bug#14857)
	(align-region): Explicit error if subexpression missing/does not match.

	* simple.el (global-visual-line-mode):
	Do not duplicate the mode lighter.  (Bug#14858)

2013-07-25  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer): In display-buffer bind
	split-window-keep-point to t, bug#14829.

2013-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el: Rename internal "desktop-X" frame params to "desktop--X".